==> vegec/nrf52840_bulb/nrf52840_bulb/app/w5500/w5500.c <==
#include <stdbool.h>
#include <stdint.h>
#include "nrf.h"
#include "nrf_gpio.h"
#include "boards.h"
#include "nrf_delay.h"
#include "nrf_drv_spi.h"
#include "nrf_drv_gpiote.h"
#include "w5500.h"
#define SPI_INSTANCE  0
#define TCP_SERVER	0x00	     //TCP服务器模式
#define TCP_CLIENT	0x01	     //TCP客户端模式
#define UDP_MODE	0x02	       //UDP(广播)模式
#define S_INIT		0x01	       //端口完成初始化
#define S_CONN		0x02	       //端口完成连接,可以正常传输数据
#define S_RECEIVE	 0x01	       //端口接收到一个数据包
#define S_TRANSMITOK 0x02	     //端口发送一个数据包完成

void SPI1_Send_Byte(unsigned char dat)
{
	  spi_tx_buf[0] = dat;
	  spi_xfer_done = false;
	  APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 1, spi_rx_buf, 0));
    while(!spi_xfer_done);
}

void Write_W5500_1Byte(unsigned short reg, unsigned char dat)
{
	SPIW5500_CS_LOW;//置W5500的SCS为低电平

	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,1个字节数据长度,写数据,选择通用寄存器
	SPI1_Send_Byte(dat);//写1个字节数据

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

void Write_W5500_2Byte(unsigned short reg, unsigned short dat)
{
	SPIW5500_CS_LOW;//置W5500的SCS为低电平
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM2|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,2个字节数据长度,写数据,选择通用寄存器
	SPI1_Send_Short(dat);//写16位数据

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

void Write_W5500_nByte(unsigned short reg, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short i;

	SPIW5500_CS_LOW;//置W5500的SCS为低电平	
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(VDM|RWB_WRITE|COMMON_R);//通过SPI1写控制字节,N个字节数据长度,写数据,选择通用寄存器

	for(i=0;i<size;i++)//循环将缓冲区的size个字节数据写入W5500
	{
		SPI1_Send_Byte(*dat_ptr++);//写一个字节数据
	}

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

void Write_W5500_SOCK_1Byte(SOCKET s, unsigned short reg, unsigned char dat)
{
	SPIW5500_CS_LOW;//置W5500的SCS为低电平	
		
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM1|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,1个字节数据长度,写数据,选择端口s的寄存器
	SPI1_Send_Byte(dat);//写1个字节数据

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

void Write_W5500_SOCK_2Byte(SOCKET s, unsigned short reg, unsigned short dat)
{
	SPIW5500_CS_LOW;//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM2|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,2个字节数据长度,写数据,选择端口s的寄存器
	SPI1_Send_Short(dat);//写16位数据

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

void Write_W5500_SOCK_4Byte(SOCKET s, unsigned short reg, unsigned char *dat_ptr)
{
	SPIW5500_CS_LOW;//置W5500的SCS为低电平
			
	SPI1_Send_Short(reg);//通过SPI1写16位寄存器地址
	SPI1_Send_Byte(FDM4|RWB_WRITE|(s*0x20+0x08));//通过SPI1写控制字节,4个字节数据长度,写数据,选择端口s的寄存器

	SPI1_Send_Byte(*dat_ptr++);//写第1个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第2个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第3个字节数据
	SPI1_Send_Byte(*dat_ptr++);//写第4个字节数据

	SPIW5500_CS_HIGH; //置W5500的SCS为高电平
}

unsigned char Read_W5500_1Byte(unsigned short reg)
{
		spi_tx_buf[0] = reg/256;
	  spi_tx_buf[1] = reg;
	  spi_tx_buf[2] = FDM1|RWB_READ|COMMON_R;
	  spi_tx_buf[3] = 0x00;
	
    //传输完成标志设置为false
	  spi_xfer_done = false;
	  SPIW5500_CS_LOW;
	  APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 4, spi_rx_buf, 4));
    while(!spi_xfer_done);
    SPIW5500_CS_HIGH;
    return spi_rx_buf[3];
}

unsigned char Read_W5500_SOCK_1Byte(SOCKET s, unsigned short reg)
{
		spi_tx_buf[0] = reg/256;
	  spi_tx_buf[1] = reg;
	  spi_tx_buf[2] = FDM1|RWB_READ|(s*0x20+0x08);
	  spi_tx_buf[3] = 0x00;
  spi_xfer_done = false;
	
	SPIW5500_CS_LOW;//置W5500的SCS为低电平
	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 4, spi_rx_buf, 4));
  while(!spi_xfer_done);	
	SPIW5500_CS_HIGH;//置W5500的SCS为高电平
	return spi_rx_buf[3];//返回读取到的寄存器数据
}

unsigned short Read_W5500_SOCK_2Byte(SOCKET s, unsigned short reg)
{
	unsigned short i;
				
	spi_tx_buf[0] = reg/256;
	spi_tx_buf[1] = reg;
	spi_tx_buf[2] = FDM2|RWB_READ|(s*0x20+0x08);
	spi_tx_buf[3] = 0x00;
	spi_tx_buf[4] = 0x00;
  spi_xfer_done = false;
	SPIW5500_CS_LOW;//置W5500的SCS为低电平
	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 5, spi_rx_buf, 5));
	while(!spi_xfer_done);
	SPIW5500_CS_HIGH;//置W5500的SCS为高电平
	i=spi_rx_buf[3]*256+spi_rx_buf[4];
	return i;//返回读取到的寄存器数据
}

unsigned short Read_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr)
{
	unsigned short rx_size;
	unsigned short offset, offset1;
	unsigned short i;
	unsigned char j;

	rx_size=Read_W5500_SOCK_2Byte(s,Sn_RX_RSR);
	if(rx_size==0) return 0;//没接收到数据则返回
	if(rx_size>1460) rx_size=1460;

	offset=Read_W5500_SOCK_2Byte(s,Sn_RX_RD);
	offset1=offset;
	offset&=(S_RX_SIZE-1);//计算实际的物理地址
	spi_tx_buf[0] = offset/256;
	spi_tx_buf[1] = offset;
	spi_tx_buf[2] = VDM|RWB_READ|(s*0x20+0x18);
	spi_xfer_done = false;

	SPIW5500_CS_LOW;//置W5500的SCS为低电平

  APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 3, spi_rx_buf, 3));
	while(!spi_xfer_done);
	j=spi_rx_buf[2];
	
	if((offset+rx_size)<S_RX_SIZE)//如果最大地址未超过W5500接收缓冲区寄存器的最大地址
	{
		for(i=0;i<rx_size;i++)//循环读取rx_size个字节数据
		{
			spi_tx_buf[i]=0x00;
		}
	  spi_xfer_done = false;
    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, rx_size, spi_rx_buf, rx_size));
	  while(!spi_xfer_done);
		for(i=0;i<rx_size;i++)//循环读取rx_size个字节数据
		{
			*dat_ptr=spi_rx_buf[i];//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
	}
	else//如果最大地址超过W5500接收缓冲区寄存器的最大地址
	{
		offset=S_RX_SIZE-offset;
		for(i=0;i<offset;i++)//循环读取rx_size个字节数据
		{
			spi_tx_buf[i]=0x00;
		}
	  spi_xfer_done = false;
    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, offset, spi_rx_buf, offset));
	  while(!spi_xfer_done);
		for(i=0;i<offset;i++)//循环读取rx_size个字节数据
		{
			*dat_ptr=spi_rx_buf[i];//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
		SPIW5500_CS_HIGH; //置W5500的SCS为高电平


	 spi_tx_buf[0] = 0x00;
	 spi_tx_buf[1] = 0x00;
	 spi_tx_buf[2] = VDM|RWB_READ|(s*0x20+0x18);
	 spi_xfer_done = false;

		SPIW5500_CS_LOW;//置W5500的SCS为低电平

		APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, 3, spi_rx_buf, 3));
		while(!spi_xfer_done);
		j=spi_rx_buf[2];

	for(i=0;i<rx_size;i++)//循环读取rx_size个字节数据
		{
			spi_tx_buf[i]=0x00;
		}
	  spi_xfer_done = false;
    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, spi_tx_buf, rx_size, spi_rx_buf, rx_size));
	  while(!spi_xfer_done);
		for(i=0;i<rx_size;i++)//循环读取rx_size个字节数据
		{
			*dat_ptr=spi_rx_buf[i];//将读取到的数据保存到数据保存缓冲区
			dat_ptr++;//数据保存缓冲区指针地址自增1
		}
	}
	SPIW5500_CS_HIGH; //置W5500的SCS为高电平

	offset1+=rx_size;//更新实际物理地址,即下次读取接收到的数据的起始地址
	Write_W5500_SOCK_2Byte(s, Sn_RX_RD, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, RECV);//发送启动接收命令
	return rx_size;//返回接收到数据的长度
}

void Write_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short offset,offset1;
	unsigned short i;

	//如果是UDP模式,可以在此设置目的主机的IP和端口号
	if((Read_W5500_SOCK_1Byte(s,Sn_MR)&0x0f) != SOCK_UDP)//如果Socket打开失败
	{		
		Write_W5500_SOCK_4Byte(s, Sn_DIPR, UDP_DIPR);//设置目的主机IP  		
		Write_W5500_SOCK_2Byte(s, Sn_DPORTR, UDP_DPORT[0]*256+UDP_DPORT[1]);//设置目的主机端口号				
	}

	offset=Read_W5500_SOCK_2Byte(s,Sn_TX_WR);
	offset1=offset;
	offset&=(S_TX_SIZE-1);//计算实际的物理地址

	SPIW5500_CS_LOW;//置W5500的SCS为低电平

	SPI1_Send_Short(offset);//写16位地址
	SPI1_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

	if((offset+size)<S_TX_SIZE)//如果最大地址未超过W5500发送缓冲区寄存器的最大地址
	{
		for(i=0;i<size;i++)//循环写入size个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据		
		}
	}
	else//如果最大地址超过W5500发送缓冲区寄存器的最大地址
	{
		offset=S_TX_SIZE-offset;
		for(i=0;i<offset;i++)//循环写入前offset个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据
		}
		SPIW5500_CS_HIGH; //置W5500的SCS为高电平

		SPIW5500_CS_LOW;//置W5500的SCS为低电平

		SPI1_Send_Short(0x00);//写16位地址
		SPI1_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

		for(;i<size;i++)//循环写入size-offset个字节数据
		{
			SPI1_Send_Byte(*dat_ptr++);//写入一个字节的数据
		}
	}
	SPIW5500_CS_HIGH; //置W5500的SCS为高电平

	offset1+=size;//更新实际物理地址,即下次写待发送数据到发送数据缓冲区的起始地址
	Write_W5500_SOCK_2Byte(s, Sn_TX_WR, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, SEND);//发送启动发送命令				
}

void W5500_Hardware_Reset(void)
{
	nrf_gpio_pin_clear(W5500_RST_PIN);//复位引脚拉低
	nrf_delay_ms(50);
	nrf_gpio_pin_set(W5500_RST_PIN);//复位引脚拉高
	nrf_delay_ms(200);
	while((Read_W5500_1Byte(PHYCFGR)&LINK)==0);//等待以太网连接完成
}
